hphp/hack/test/typecheck/const_attribute/non_const_from_trait.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

trait T { public int $p = 1; }
<<__Const>> class C { use T; }
